<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="switch_database"
        android:title="@string/preference_database_title"
        android:summaryOn="@string/preference_database_summary_on"
        android:summaryOff="@string/preference_database_summary_off"/>

    <SwitchPreference
        android:defaultValue="true"
        android:key="switch_http"
        android:title="@string/preference_http_title"
        android:summaryOn="@string/preference_http_summary_on"
        android:summaryOff="@string/preference_http_summary_off"/>

    <SwitchPreference
        android:defaultValue="true"
        android:key="switch_location"
        android:title="@string/preference_location_title"
        android:summaryOn="@string/preference_location_summary_on"
        android:summaryOff="@string/preference_location_summary_off"/>
</PreferenceScreen>